syntax = "proto3";

package troop;
message Pendant {
    uint32 station = 1;//站位
    uint32 id = 2;
}

message Troop {
    uint32 idx = 1; // 队伍编号
    uint32 eid = 2;
    uint32 hero_uid = 3; // 英雄uid
    repeated Pendant pendants = 4;//挂件列表
    repeated uint32 soldier_ids = 5;//士兵id列表
}

message c2s_load {
} 
message s2c_load {
    uint32 err = 1; // OK
    repeated Troop troop_list = 2;
}

//编辑部队
message c2s_edit_troop {
    Troop troop = 1;
}

message s2c_edit_troop {
    uint32 err = 1; // OK
}
